--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding:0;
 }
 body {
-    background-image: url(/images/bg-desktop.svg);
+    background-image: url('images/bg-desktop.svg');
     background-color:hsl(257, 40%, 49%);
     width:1440px;
     height:800px;
